# Sundry

./: .gitignore  CONTRIBUTING.md  README.md  installer.iss  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_feedback.yml  feature_request.yml  preference_adjective.yml
.github/workflows/: Sundry.yml  build.yaml  build.yml  test.yaml
Sundry/: Dockerfile  Program.cs  Sundry.csproj  Sundry.sln
Sundry/Properties/: launchSettings.json
docs/config/: README.md
docs/config/0.1/: README.md  config.jsonc
docs/config/0.2/: README.md  config.jsonc
docs/config/0.3/: README.md  config.jsonc
docs/config/1.0/: README.md  config.jsonc
docs/config/1.1/: README.md  config.jsonc
docs/config/1.2/: README.md  config.jsonc
docs/config/1.3/: README.md  config.jsonc
icon/: LICENSE.md
src/: cat.py  config.py  fun.txt  ignore.py  remove.py  repr.py  sundry.ps1  sundry.py  sync.py
src/exception/: operation.py  request.py
src/function/: constant.py
src/function/constant/: general.py  logsAnalyse.py  paths.py
src/function/files/: manifest.py  open.py
src/function/format/: github.py
src/function/git/: format.py
src/function/github/: api.py  pr.py  token.py
src/tools/: autoremove.py  cat.py  config.py  ignore.py  logsAnalyse.py  modify.py  prune.py  remove.py  repr.py  sync.py  verify.py
sundry/: Program.cs  sundry.sln
sundry/Command/: About.cs  Config.cs  Help.cs  Version.cs  repr.cs
sundry/Method/: Print.cs  RunCommand.cs
自动化脚本/: png-2-ico.py  修改版本号.py  假装静默.py
自动化脚本/假装静默/: verify.py
(+7 files in other folders)
